version/0.21/_sources/api/solver/_autosummary/settings/refractive_index.rst.txt
:orphan:

.. _refractive_index:

refractive_index
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.refractive_index.refractive_index
    :show-inheritance:

.. rubric:: Attributes

======================================================   ====================================================

Attribute                                                                                             Summary

======================================================   ====================================================
:ref:`option <option_12>`                                    Select method for calculating material property.

:ref:`value <value_11>`                                                  Specify the constant property value.

:ref:`gray_band_coefficients <gray_band_coefficients>`                                Gray band coefficients.

======================================================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`          'child_object_type' of mixture.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

