version/0.28/_sources/api/solver/_autosummary/settings/refractive_index.rst.txt
:orphan:

.. _refractive_index:

refractive_index
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.refractive_index
    :show-inheritance:

.. rubric:: Attributes

======================================================   ====================================

Attribute                                                                             Summary

======================================================   ====================================
:ref:`option <option_26>`                                    Select material property method.

:ref:`value <value_15>`                                      Specify constant property value.

:ref:`gray_band_coefficients <gray_band_coefficients>`        Gray band coefficient settings.

======================================================   ====================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                                              'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

